--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -7,6 +7,12 @@
   border: 1px solid #d0d0d0;
 }
 
+.form-control-lg {
+  font-size: 16px;
+  padding: 0.5rem 1rem;
+  height: auto;
+}
+
 .login-card input::placeholder {
   font-size: 14px;
   color: #6c757d;
