--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container d-flex justify-content-center py-5">
    <div class="login-card card p-5 shadow-sm">
       <div class="text-center mb-3">
-         <img src="assets/logo.png" alt="Logo" class="logo-img" />
+         <img src="assets/capacity-chemical-logo.svg" alt="Logo" class="logo-img" />
       </div>
       <h1 class="text-center display-6 fw-semibold text-muted mb-1">Account Log In</h1>
       <p class="text-center text-muted mb-4">
