--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,8 @@
       class="dashboard-card"
       (click)="navigateToCard(card)"
     >
-      <i class="material-icons card-icon">{{card.icon}}</i>
+      <!-- <i class="material-icons card-icon">{{card.icon}}</i> -->
+      <img [src]="card.iconUrl" alt="{{ card.title }}" class="img-fluid small-logo pb-3" />
       <div class="card-title">{{ card.title }}</div>
     </div>
   }
