icon background update

--- a/src/app/pages/side-bar/side-bar.component.scss
+++ b/src/app/pages/side-bar/side-bar.component.scss
@@ -28,6 +28,7 @@ aside {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: lightgray !important;
 
     .material-icons {
       font-size: 18px;
